# irys-harness

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: default.json
src/irys_harness/: __init__.py  agent_bench_bridge.py  artifacts.py  cli.py  config.py  diagnosis.py  doctor.py  env.py  events.py  experiments.py  failures.py  harvey_pipeline.py  metrics.py  product.py  product_ui.py  state.py  trace.py
src/irys_harness/agents/: __init__.py  evidence.py
src/irys_harness/benchmarks/: __init__.py  base.py  fixture.py  harvey.py  harvey_eval.py
src/irys_harness/indexing/: __init__.py  loaders.py  retrieval.py
src/irys_harness/models/: __init__.py  gemini.py
tests/: test_agent_bench_bridge.py  test_artifacts.py  test_config_metrics.py  test_diagnosis.py  test_doctor.py  test_evidence.py  test_experiments.py  test_failures.py  test_gemini_model.py  test_harvey_adapter.py  test_harvey_eval.py  test_harvey_priority_chunks.py  test_harvey_queries.py  test_indexing.py  test_product.py  test_retrieval.py  test_trace_cli.py
