[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "irys-harness"
version = "0.1.0"
description = "Benchmark execution harness with structured traces and cost accounting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "markitdown>=0.1.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23"
]

[project.scripts]
harness = "irys_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
